--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "js-sha256": "^0.9.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
-    "sqlite3": "^4.2.0"
+    "sqlite3": "^4.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "bcrypt": "^5.0.0",
