--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
   "dependencies": {
     "express": "^4.17.1",
     "js-sha256": "^0.9.0",
+    "mongoose": "^6.0.14",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
-    "sqlite3": "^4.2.0",
-    "uuid": "^8.3.2"
+    "sqlite3": "^4.2.0"
   },
   "devDependencies": {
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^10.0.0",
     "express-jwt": "^5.3.3",
     "express-validator": "^6.5.0",
     "jsonwebtoken": "^8.5.1"
