--- a/package.json
+++ b/package.json
@@ -21,12 +21,10 @@
     "js-sha256": "^0.9.0",
     "mongoose": "^6.0.14",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.4",
-    "sqlite3": "^4.2.0"
+    "nodemon": "^2.0.4"
   },
   "devDependencies": {
     "bcrypt": "^5.0.0",
-    "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express-jwt": "^5.3.3",
     "express-validator": "^6.5.0",
