--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Phone book demo",
   "main": "server.js",
   "scripts": {
-    "start": "node server"
+    "start": "node server",
+    "test": "mocha --recursive --exit"
   },
   "repository": {
     "type": "git",
@@ -19,15 +20,19 @@
   "dependencies": {
     "express": "^4.17.1",
     "js-sha256": "^0.9.0",
+    "mocha": "^9.1.3",
     "mongoose": "^6.0.14",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4"
   },
   "devDependencies": {
     "bcrypt": "^5.0.0",
+    "chai": "^4.3.4",
     "dotenv": "^10.0.0",
     "express-jwt": "^5.3.3",
     "express-validator": "^6.5.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "mockgoose": "^8.0.4",
+    "supertest": "^6.1.6"
   }
 }
